(Bug) main.css -> menu list -> overflow hide

--- a/assets/Style/main.css
+++ b/assets/Style/main.css
@@ -812,7 +812,7 @@ h3 {
 }
 .header__menu{
   /* position: absolute; */
-  position: relative;
+  /* position: relative; */
   width: 100%;
   /* height: 100%; */
   order:3;
@@ -820,7 +820,6 @@ h3 {
 .header__menulist{
   display: flex;
   position: absolute;
-  right: 0;
   overflow-y: hidden;
   flex-direction: row;
   justify-content: space-evenly;
@@ -828,17 +827,18 @@ h3 {
 }
 #header__shadow{
   position: absolute;
-  height: 100px;
-  width: 10px;
-  /* float: right; */
-  background-color: red;
-  /* opacity: 0.5; */
+  height: 29px;
+  width: 39px;
+  left: 0;
+  background: linear-gradient(to right, #fdfdfd 0%, rgba(0, 76, 106, 0) 100%);
+  margin: 10px 0;
 }
 .header__menulist li{
   list-style-type: none;
   white-space: nowrap;
   padding: var(--space-3) 0;
-
+  margin-left: 24px;
+  color: var(--color-mofid-blue);
 }
 .header__login{
   order:1;
@@ -879,18 +879,18 @@ h3 {
   margin-bottom: 3px;
   transition: 0.3s;
 }
-.header_btnhamburger:hover span:nth-child(2){
+.header_btnhamburger-showmenu span{
+  width: 20px;
+  transform-origin: 0;
+}
+.header_btnhamburger-showmenu span:nth-child(2){
   visibility:hidden;
 }
-.header_btnhamburger:hover span:nth-child(1){
+.header_btnhamburger-showmenu span:nth-child(1){
   transform:  rotate(31deg);
-  transform-origin: 0;
-  width: 20px;
 }
-.header_btnhamburger:hover span:nth-child(3){
+.header_btnhamburger-showmenu span:nth-child(3){
   transform: rotate(-31deg);
-  transform-origin: 0;
-  width: 20px;
 }
 
  /* End_Header Moghaddamfar */
